Fix alignment

--- a/public/css/light.scss
+++ b/public/css/light.scss
@@ -981,14 +981,14 @@ tr.table-warning:hover > td {
 }
 
 .score-box-deadline {
-	height: 92px;
+	height: 94px;
 }
 .score-box-deadline-small {
 	height: 54px;
 }
 
 .score-box-all-star {
-	height: 46px;
+	height: 47px;
 }
 
 .score-box-score {
